--- a/src/App.1.css
+++ b/src/App.1.css
@@ -15,11 +15,15 @@ body {
   width: 300px;
   perspective: 0 200px;
   background: #EBEBEB;
- 
+  transform: scale(0.8) skew(20deg);
+  transition: transform .5s ease .5s;
   position: relative;
 }
 
- 
+.App:hover {
+  transform: scale(1.5) skew(0deg);
+  transition: transform .6s;
+}
 
 .App:hover::before {
   opacity: 0;
@@ -39,7 +43,7 @@ body {
   height: 10px;
   top: 100%;
   left: 10px;
-   
+  transform: skewX(45deg);
   opacity: 1;
   transform-origin: 0 100%;
   perspective: 0 200px;
@@ -56,7 +60,7 @@ body {
   height: 100%;
   bottom: 0;
   left: 100%;
-   
+  transform: skewY(45deg);
   transform-origin: 0 100%;
   perspective: 0 200px;
   opacity: 1;
